[package]
name = "archive_canister"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.3"
ic-cdk-macros = "0.3"
candid = "0.7.8"
serde = "1.0.99"
yansi = "0.5.0"

dfn_core = {path = "../rust_canisters/dfn_core"}
dfn_candid = {path = "../rust_canisters/dfn_candid"}
dfn_protobuf = {path = "../rust_canisters/dfn_protobuf"}
on_wire = {path = "../rust_canisters/on_wire"}
phantom_newtype = { path = "../phantom_newtype" }
ic-base-types = { path="../types/base_types" }
ic-types = { path = "../types/types" }
ic-crypto-sha = {path = "../crypto/sha/"}