[package]
name = "token_canister"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.3"
ic-cdk-macros = "0.3"
candid = "0.7.4"
dfn_core = {path = "../rust_canisters/dfn_core"}
dfn_candid = {path = "../rust_canisters/dfn_candid"}
dfn_http = {path = "../rust_canisters/dfn_http"}
dfn_protobuf = {path = "../rust_canisters/dfn_protobuf"}
lazy_static = "1.4.0"
serde = "1.0"
byteorder = "1.4"
serde_bytes = "0.11"
serde_cbor = "0.11"
ic-base-types = {path="../types/base_types"}
prost = "0.9.0"
prost-derive = "0.9.0"

[build-dependencies]
prost-build = { version = "0.9.0" }
