[package]
name = "token_canister"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.3"
ic-cdk-macros = "0.3"
candid = "0.7.4"
dfn_core = {path = "../rust_canisters/dfn_core"}
dfn_candid = {path = "../rust_canisters/dfn_candid"}
dfn_protobuf = {path = "../rust_canisters/dfn_protobuf"}
lazy_static = "1.4.0"
serde = "1.0"
byteorder = "1.4"
serde_bytes = "0.11"
serde_cbor = "0.11"
ic-base-types = { path="../types/base_types" }
ic-types = { path = "../types/types" }
ic-crypto-sha = {path = "../crypto/sha/"}
prost = "0.9.0"
prost-derive = "0.9.0"
yansi = "0.5.0"
hex = {version = "0.4.2", features = ["serde"] }
on_wire = {path = "../rust_canisters/on_wire"}
phantom_newtype = { path = "../phantom_newtype" }
crc32fast = "1.2.0"
intmap = "0.7.0"
comparable = { version = "0.3", features = ["derive"] }
digest = "0.9.0"

[build-dependencies]
prost-build = { version = "0.9.0" }
