[package]
name = "ic-registry-transport"
version = "0.8.0"
edition = "2018"

[dependencies]
ic-cdk = "0.3"
ic-cdk-macros = "0.3"
candid = "0.7.8"
ic-protobuf = { path = "../../protobuf" }
prost = "0.9.0"
prost-types = "0.9.0"
bytes = "1.0.1"
serde = { version = "1.0.99", features = ["derive"] }

[build-dependencies]
prost-build = "0.9.0"
